--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="indicator_background">#66FFFFFF</color>
+    <color name="onboarding1_background_color">#F0CF69</color>
+    <color name="onboarding2_background_color">#B7ABFD</color>
+    <color name="onboarding3_background_color">#EFB491</color>
+    <color name="onboarding4_background_color">#95B6FF</color>
+    <color name="result_screen_background_color">#95B6FF</color>
 </resources>
